# GPU-Supercomputing

./: README.md
TP0/: .cproject  .project  CMakeLists-cuda11.2.txt  CMakeLists.txt  CMakeLists_cmake28.txt
TP0/inc/: matrixMul.h
TP0/src/CPP/: matrixMul_C.cpp  matrixMul_CUBLAS.cu  matrixMul_cuda.cu  matrixMul_main.cu
TP0/src/CUDA/: matrixMul_kernel.cuh
TP1/CUDA/: .cproject  .project  CMakeLists.txt  CMakeLists_cmake28.txt  CMakeLists_cmake38.txt  NotesPourLeRqpport.txt  seuillage.h  seuillage_C_student.cpp  seuillage_main_student.cu
TP1/Image/: carre.raw  carre_noise_gaussian.raw  carre_noise_saltpepper.raw  carre_out.raw
TP1/Matlab/: Contours_Matlab.m  raw2jpg.m  seuil_Matlab.m
TP2/: .cproject  CMakeLists.txt  GpuTimer.h  Reduce.cu
TP3/: CMakeCache.txt  Makefile  cmake_install.cmake  main_nano.cu  my_project  mylib.cpp  mylib.cu  mylib.cuh
TP4/: Lab2.ipynb
TP5/: A5_Lab5.ipynb
